@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class Collaborator {
    + recordTaskCompletion(taskId: String, completionDate: Date)
}

class TaskCompletionUI {
    + getTaskCompletionData()
    + displayCompletionConfirmation()
}

class TaskCompletionController {
    + recordTaskCompletion(taskId: String, completionDate: Date)
}

class Repositories {
    + getInstance()
}

class TaskRepository {
    + getTaskById(taskId: String): Task
    + save(task: Task)
}

class Task {
    - status: String
    - completionDate: Date
    + markAsCompleted(completionDate: Date)
}

ApplicationSession --> ApplicationSession : getInstance()
ApplicationSession --> "1" UserSession : manages

TaskCompletionController --> Collaborator
TaskCompletionController --> Repositories
TaskCompletionController ..> ApplicationSession

Collaborator --> TaskCompletionUI
TaskCompletionUI --> TaskCompletionController

Repositories --> TaskRepository
TaskRepository --> Task

TaskCompletionController --> TaskRepository : getTaskById(taskId)
TaskCompletionController --> TaskRepository : save(task)
TaskRepository --> Task : getTaskById(taskId)
TaskRepository --> Task : save(task)
Task --> Task : markAsCompleted(completionDate)

@enduml
